Set up the correct onClick functions for all the topic buttons and implement them on small screen

--- a/src/styles/PostsPage.module.css
+++ b/src/styles/PostsPage.module.css
@@ -21,3 +21,12 @@
   font-size: 1.2rem;
   border-radius: 30px;
 }
+
+.Clear {
+  position: absolute;
+  top: 10px;
+  right: 14px;
+  font-size: 0.9rem;
+  color: black;
+  cursor: pointer;
+}
